--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,12 @@
 [tool.ruff]
 line-length = 100
-select = ["E", "F", "W", "I"]  # Select error codes to check
-ignore = ["E501"]              # Ignore line length errors (if needed)
 
+[tool.ruff.lint]  # Add this section
+    select = ["E", "F", "W", "I"]
+    ignore = ["E501", "W191"]  # Add W191 to ignore or change indent-style
+    per-file-ignores = {
+      "tests/*" = ["D103", "D100"]
+    }
 [tool.ruff.format]
-quote-style = "single"         # Example formatting option
-indent-style = "tab"
-
-[tool.ruff.per-file-ignores]
-"tests/*" = ["D103", "D100"]  # Ignore some rules in tests
+quote-style = "single"
+indent-style = "tab"  # Or "space" if you want to use spaces
