--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,15 @@
 [tool.ruff]
 line-length = 100
 
-[tool.ruff.lint]  # Add this section
-    select = ["E", "F", "W", "I"]
-    ignore = ["E501", "W191"]  # Add W191 to ignore or change indent-style
-    per-file-ignores = {
-      "tests/*" = ["D103", "D100"]
-    }
+[tool.ruff.lint]
+select = ["E", "F", "W", "I"]
+ignore = ["E501", "W191"]  # Or remove W191 if indent-style is "space"
+
+[tool.ruff.lint.per-file-ignores] # Important: Nested under [tool.ruff.lint]
+"tests/*" = ["D103", "D100"]
+"src/download_smileys.py" = ["S101"]
+
+
 [tool.ruff.format]
 quote-style = "single"
-indent-style = "tab"  # Or "space" if you want to use spaces
+indent-style = "tab" 
