--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -24,8 +24,8 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
       - name: Lint with ruff
-        run: ruff check . --fix
+        run: ruff check . --fix # Ruff linter
       - name: Format with ruff and check for changes
-        run: ruff format --check .  # Exit code 1 if changes needed
+        run: ruff format .  # Ruff formatter
       - name: Run tests with pytest
         run: python -m pytest tests/
