--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -22,10 +22,12 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install -r requirements.txt ruff pytest
       - name: Lint with ruff
-        run: ruff check . --fix # Ruff linter
+        run: ruff check . --fix
       - name: Format with ruff and check for changes
-        run: ruff format .  # Ruff formatter
+        run: ruff format --check . # Important:  Use --check
+      - name: Add src to PYTHONPATH 
+        run: echo "PYTHONPATH=$PYTHONPATH:src" >> $GITHUB_ENV
       - name: Run tests with pytest
         run: python -m pytest tests/
