--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
-ruff 
-pytest
-requests
-beautifulsoup4
+ruff==0.8.0
+flake8-logging-format==1.0.0
+pytest==7.4.0
+requests==2.31.0
+beautifulsoup4==4.12.2
+opencv-contrib-python==4.7.0.72
