--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,21 @@
-.ruff_cache/
-__pycache__
+# Dépendances Node.js
+node_modules/
+
+# Caches Python
 .venv/
+.ruff_cache/
+__pycache__/
+
+# Environnement local
+.env
+
+# Journaux et fichiers temporaires
+*.log
+
+# macOS et Windows
+.DS_Store
+thumbs.db
+
+# Autres (si applicable)
+coverage/     # Généré par les outils de test
+dist/         # Dossier de build
