--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint": "^9.15.0",
     "eslint-plugin-jest": "^28.9.0",
     "globals": "^15.12.0",
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0"
   }
 }
