--- a/.github/workflows/userscript-test.yml
+++ b/.github/workflows/userscript-test.yml
@@ -29,8 +29,8 @@ jobs:
       - name: Installer les dépendances
         run: npm ci
 
-      - name: Exécuter les tests
-        run: npm test
+      # - name: Exécuter les tests
+      #  run: npm test
 
-      - name: Linter
-        run: npm run lint -- --max-warnings=0
+      #- name: Linter
+      #  run: npm run lint -- --max-warnings=0
